namespaces/live.cloud-platform.service.justice.gov.uk/visit-someone-in-prison-backend-svc-staging/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: visit-someone-in-prison-backend-svc-staging
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "staging"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "visits-dev"
    cloud-platform.justice.gov.uk/slack-alert-channel: "visits-alerts-nonprod"
    cloud-platform.justice.gov.uk/application: "Visit Someone in Prison"
    cloud-platform.justice.gov.uk/owner: "Prisoner Communications: prisonvisitsbooking@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/visit-scheduler.git,https://github.com/ministryofjustice/hmpps-notifications-alerts-vsip,https://github.com/ministryofjustice/hmpps-prison-visits-testing-helper-api,https://github.com/ministryofjustice/hmpps-prison-visit-booker-registry"
    cloud-platform.justice.gov.uk/team-name: "hmpps-prison-visits-booking"
